tests/positive/struct_enum.ax
module struct_enum;

struct Pair {
    a: i32;
    b: i32;
}

enum Tag: u16 {
    zero = 0,
    one = 1,
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    let p: Pair = Pair { a: 1, b: 2 };
    return p.a + p.b;
}
